# tracking_dataset

./: .gitignore  .gitmodules  readme.md
analysis/: .gitignore  240205_inspect.ipynb  2406_render_script.ipynb  render.py
convert/: analyze_trace.py  convert.sh  outlier_remove.py  post_verify.py  postprocess.py  processing_log.txt  recording.py  shape_polygons.py  video.ipynb
recorder/: CMakeLists.txt  camera.cpp  camera.h  camera_stuff.cpp  camera_stuff.h  data_converter.cpp  event_counter.cpp  flow_struct.h  main.cpp  optitrack.cpp  optitrack.h  protocol.h  readme.md  recorder_visualizer.cpp  recorder_visualizer.h  stat_analyzer.cpp  stat_plot.py  tester.py  visualizer.cpp
recorder/aedat/: CMakeLists.txt  aedat4.hpp  ioheader_generated.h  utils.hpp
recorder/aedat/flatbuffers/: events_generated.h  file_data_table.fbs  file_data_table_generated.h  frame_generated.h  imus_generated.h  ioheader.fbs  trigger_generated.h
recorder/undistortion/: undistort.py
